--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "npm": "10.x.x"
   },
   "scripts": {
-    "dev": "vite",
+    "start:client": "vite",
+    "start:server": "json-server src/database.json --port 3001",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
@@ -19,7 +20,8 @@
     "react-dom": "18.2.0",
     "react-redux": "9.1.0",
     "react-router-dom": "6.21.2",
-    "redux": "5.0.1"
+    "redux": "5.0.1",
+    "redux-thunk": "3.1.0"
   },
   "devDependencies": {
     "@types/react": "18.2.43",
@@ -30,6 +32,7 @@
     "eslint": "8.55.0",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.5",
+    "json-server": "0.17.4",
     "prettier": "3.2.2",
     "typescript": "5.2.2",
     "vite": "5.0.12"
