--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
     "prettify": "prettier --write \"**/*.{ts,tsx,json,md,scss,html}\""
   },
   "dependencies": {
+    "@reduxjs/toolkit": "2.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "9.1.0",
-    "react-router-dom": "6.21.2",
-    "redux": "5.0.1",
-    "redux-thunk": "3.1.0"
+    "react-router-dom": "6.21.2"
   },
   "devDependencies": {
     "@types/react": "18.2.43",
